// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PetCollection deep mount 1`] = `
<PetCollection
  updateStatusCallback={[Function]}
>
  <section>
    <table>
      <tbody>
        <tr>
          <th>
            Name
          </th>
          <th>
            Breed
          </th>
          <th>
            Age
          </th>
          <th>
            About
          </th>
        </tr>
      </tbody>
    </table>
    <NewPetForm
      addPetCallback={[Function]}
    >
      <form
        onSubmit={[Function]}
      >
        <h2>
          Test header
        </h2>
        <div>
          <label
            htmlFor="name"
          >
            Name
          </label>
          <input
            name="name"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div>
          <label
            htmlFor="breed"
          >
            Breed
          </label>
          <input
            name="breed"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div>
          <label
            htmlFor="age"
          >
            Age
          </label>
          <input
            name="age"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div>
          <label
            htmlFor="about"
          >
            About
          </label>
          <input
            name="about"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div>
          <input
            type="submit"
          />
        </div>
      </form>
    </NewPetForm>
  </section>
</PetCollection>
`;

exports[`PetCollection shallow mount 1`] = `
<section>
  <table>
    <tbody>
      <tr>
        <th>
          Name
        </th>
        <th>
          Breed
        </th>
        <th>
          Age
        </th>
        <th>
          About
        </th>
      </tr>
    </tbody>
  </table>
  <NewPetForm
    addPetCallback={[Function]}
  />
</section>
`;
